# eco-region

./: README.md
preprocess/: CMakeLists.txt  install.sh
preprocess/data/: MO.shx  MO.xml
preprocess/lib/: bson-1.0.lib  bson-static-1.0.lib  bsoncxx.lib  libbsoncxx.lib  libmongocxx.lib  mongoc-1.0.lib  mongoc-static-1.0.lib  mongocxx.lib  shp.lib
preprocess/lib/pkgconfig/: libbson-1.0.pc  libbson-static-1.0.pc  libbsoncxx.pc  libmongoc-1.0.pc  libmongoc-ssl-1.0.pc  libmongoc-static-1.0.pc  libmongocxx.pc
preprocess/src/: CMakeLists.txt  cmake_install.cmake  dbio.h  definition.h  fileio.h  geo.h  geogrid.h  geometry.h  main.cpp  pointandpolygon.h  polygon.h  preprocess.vcxproj  preprocess.vcxproj.filters  protectedarea.h
preprocess/src/preprocess.dir/Debug/preprocess.tlog/: cl.command.1.tlog  cl.read.1.tlog  cl.write.1.tlog  custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  preprocess.lastbuildstate
